form and many layout fixes

--- a/css/main.css
+++ b/css/main.css
@@ -832,7 +832,6 @@ select {
   background-size: 2vw;
   background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iMTQiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZmlsbC1ydWxlPSJldmVub2RkIiBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Ik0wIDZMNS42NTcuMzQzIDExLjMxNCA2SDB6bTAgMmw1LjY1NyA1LjY1N0wxMS4zMTQgOEgweiIgZmlsbD0iIzMzMyIvPjwvc3ZnPg==);
   background-color: white;
-  height: 5vw;
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
@@ -840,6 +839,7 @@ select {
   margin-bottom: 4vw;
   border: 0.2vw solid #6b46c1;
   border-radius: 0;
+  height: 9vw;
 }
 
 .toggle {
@@ -855,15 +855,20 @@ select {
 }
 
 .toggle > label.option {
-  height: 16vw;
   display: flex;
   align-items: center;
   flex: 1 0 45%;
-  border: 0.1vw solid #000;
+  border: 1px solid #6b46c1;
   opacity: 0.5;
   cursor: pointer;
   position: relative;
   text-align: center;
+  height: 9vw;
+  margin-bottom: 4vw;
+}
+
+.toggle > label.option:not(.small) {
+  height: 16vw;
 }
 
 .toggle > label.option:hover {
@@ -883,6 +888,16 @@ select {
 /* :global(label.active) {
     opacity: 1;
   } */
+
+.invalid,
+textarea.invalid,
+input.invalid + label::before {
+  border-color: red;
+}
+
+input[type=checkbox].invalid + span {
+  color: red;
+}
 
 @media (min-width: 768px) {
   .primary-button,
@@ -918,18 +933,18 @@ select {
 
   /* TOggle indicator styles  */
 
-  .toggle > label.option {
-    height: 4.9vw;
-    margin-bottom: 2vw;
-    border: 0.2vw solid #6b46c1;
+  .toggle > label.option:not(.small) {
+    height: 9vw;
   }
 
-  .toggle > label {
+  .toggle > label.option {
     padding-left: 1vw;
     padding-right: 1vw;
-    height: 4.1vw;
+    height: 4.9vw;
     display: flex;
     align-items: center;
+    margin-bottom: 2vw;
+    border: 0.2vw solid #6b46c1;
   }
 
   .toggle .overlap {
@@ -937,18 +952,16 @@ select {
   }
 
   select {
+    height: 4.9vw;
     background-size: 1vw;
   }
 }
 
-.invalid,
-textarea.invalid,
-input.invalid + label::before {
-  border-color: red;
-}
-
-input[type=checkbox].invalid + span {
-  color: red;
+@media (min-width: 1024px) {
+  select,
+.toggle > label.option {
+    height: 4.1vw;
+  }
 }
 
 .icon {
