--- a/site/danke.njk
+++ b/site/danke.njk
@@ -9,7 +9,7 @@ title: Danke
 ---
 
 <main id="main" class="" tabindex="-1">
-<section class="px-x1p5 mb-x1 text-x2 md:text-x0p75" id="main">
+<section class="px-x1p5 mb-x1 pt-x2 md:pt-x1p75 text-x2 md:text-x0p75" id="main">
 	<div class="grid md:grid-cols-2 gap-x2 md:gap-x1">
 		<div>
 			<h1 class="text-primary text-x3 leading-tight md:text-x1p5 mb-x1
