--- a/site/faq.njk
+++ b/site/faq.njk
@@ -6,11 +6,11 @@ meta_description:
   ✅ weltweiter Schutz ✅ auch im Auto ✅ kostenlose, individuelle Beratung
   vom Experten
 body_class: home
-title: Welcome to Skeleventy!
+title: FAQ
 ---
 <main id="main" class="" tabindex="-1">
-  <section class="px-x1p5">
-    <h1 class="text-primary text-x6 leading-tight mb-x2 border-solid">
+  <section class="px-x1p5 pt-x2 md:pt-x1p5">
+    <h1 class="text-primary text-x4 leading-tight mb-x1p5 border-solid">
       Häufig gestellte Fragen
     </h1>
     <div class="grid md:grid-cols-2 gap-x1">
