--- a/site/kontakt.njk
+++ b/site/kontakt.njk
@@ -9,8 +9,8 @@ title: Kontakt
 ---
 
 <main id="main" class="" tabindex="-1">
-<section class="px-x1p5 text-x2 md:text-x0p75 ">
-	<h1 class="text-primary text-x6 leading-tight border-solid mb-x1">
+<section class="px-x1p5 pt-x2 md:pt-x1p5 text-x2 md:text-x0p75 ">
+	<h1 class="text-primary text-x4 leading-tight border-solid mb-x1">
 		Kontakt
 	</h1>
 	<p>Hier findest Du Deine Kontaktmöglichkeiten:</p>
