--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -49,11 +49,11 @@ title: Anfrage
                 </label>
                 <label class="inline-flex flex-col ">
                     Vorname *
-                    <input type="text" name="fname" autocomplete="given-name" required="required"/>
+                    <input type="text" name="vorname" autocomplete="given-name" required="required"/>
                 </label>
                 <label class="inline-flex flex-col ">
                     Nachname *
-                    <input type="text" name="lname" autocomplete="family-name" required="required"/>
+                    <input type="text" name="nachname" autocomplete="family-name" required="required"/>
                 </label>
                 <label class="inline-flex flex-col ">
                     E-Mail *
