added netlify toml and fixed notice text

--- a/site/includes/components/special-notice.njk
+++ b/site/includes/components/special-notice.njk
@@ -1,6 +1,6 @@
 <div class="hidden md:relative md:flex items-center justify-center w-full bg-primary-light p-x1p5 md:px-x1p5 md:py-x0p25 z-10 text-x2 md:text-x0p5 lg:text-x0p25" data-notice>
 	<p class="text-center block text-primary">
-		Unser Geschenk für Dich bis 30. Juni: 10 % Sonderrabatt!
+		Aktuell gibt es 10 % Sonderrabatt auf alle Beiträge!
 	</p>
 	<div class="icon absolute right-0 mr-x1p5 ml-x0p5 w-x0p5 h-x0p5" data-hide-notice aria-label="Angebot ausblenden"></div>
 </div>
