added review functionality

--- a/site/includes/components/footer.njk
+++ b/site/includes/components/footer.njk
@@ -21,7 +21,7 @@
 			<br/>
 			Versicherungsfachmann (BWV)
 			<br/>
-			Generalagentur der
+			Generalagentur der&nbsp;
 			<br class="md:hidden"/>
 			Mannheimer Versicherung AG
 		</p>
