--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,5 +1,6 @@
 //==========  Import all component partials ==========//
 
+@import "fonts";
 @import "mobile-nav";
 @import "buttons";
 @import "form";
