--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -42,7 +42,8 @@ title: Anfrage
             <div class="grid md:grid-cols-2 gap-x0p5 mb-x0p5">
                 <label class="inline-flex flex-col ">
                     Anrede *
-                    <select name="anrede" autofocus="autofocus">
+                    <select name="anrede" autofocus="autofocus" required>
+                        <option disabled selected value> -- bitte auswählen -- </option>
                         <option value="Frau">Frau</option>
                         <option value="Herr">Herr</option>
                     </select>
