--- a/site/schaden-melden.njk
+++ b/site/schaden-melden.njk
@@ -18,6 +18,7 @@ title: Kontakt
                 <label class="inline-flex flex-col">
                     Anrede *
                     <select data-anrede="data-anrede" autofocus="autofocus">
+                        <option disabled selected value> -- bitte auswählen -- </option>
                         <option value="Frau">Frau</option>
                         <option value="Herr">Herr</option>
                     </select>
