--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -65,7 +65,7 @@
         {% include "../components/jsonld/faqs.njk" %}
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        {# <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-99324592-3"></script>
+        <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-99324592-3"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -74,7 +74,7 @@
             gtag('js', new Date());
 
             gtag('config', 'UA-99324592-3');
-        </script> #}
+        </script>
     </head>
     <body {% if body_class %} id="wrapper" {% endif %} class="bg-light max-w-100vw">
 
