Removed skeleventy title

--- a/site/index.njk
+++ b/site/index.njk
@@ -5,7 +5,7 @@ meta_description: Musikinstrumente, Equipment und Zubehör einfach online versic
     ✅ weltweiter Schutz ✅ auch im Auto ✅ kostenlose, individuelle Beratung
     vom Experten
 body_class: home
-title: Welcome to Skeleventy!
+title: Musikversicherung
 ---
 {% from "components/home/4-text.njk" import text %}
 
