--- a/site/includes/components/home/5-recent-reviews.njk
+++ b/site/includes/components/home/5-recent-reviews.njk
@@ -1,5 +1,5 @@
 <section class=" md:flex flex-row text-light" id="reviews">
-	<img src="/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg" alt="Violinen-Sektion eines Orchesters" class="hidden  md:block md:relative md:self-center md:ml-x1p5 md:max-h-50vh md:w-2/5 md:my-x3 z-10 object-cover" [data-lazy]/>
+	<img src="/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg" alt="Violinen-Sektion eines Orchesters" class="hidden  md:block md:relative md:self-center md:ml-x1p5 md:max-h-50vh md:my-x3 z-10 object-cover" [data-lazy]/>
 
 	<div class="content py-x3 px-x1p5 md:p-x1p5 md:pl-x6 relative bg-primary md:-ml-x4">
 		<h2 class=" font-medium text-x6 md:text-x2 flex-1 leading-tight md:mr-x0p5 ">
