fixed mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -723,7 +723,7 @@ a {
   }
 
   .expanded {
-    transform: translateY(0px);
+    transform: translateX(0px);
     transition: all 400ms ease;
   }
 }
