--- a/resources/sass/components/_mobile-nav.scss
+++ b/resources/sass/components/_mobile-nav.scss
@@ -141,7 +141,7 @@
     transition: all 400ms ease;
   }
   .expanded {
-    transform: translateY(0px);
+    transform: translateX(0px);
     transition: all 400ms ease;
   }
 }
