--- a/site/versicherungsbedingungen.njk
+++ b/site/versicherungsbedingungen.njk
@@ -21,9 +21,9 @@ title: Welcome to Skeleventy!
 			<br/>
 			Gib dort den folgenden Code ein.
 			<br/>
-			für SINFONIMA: T010 0400 0000 00G0 0519
+			für SINFONIMA: T20G 00GG 1019
 			<br/>
-			für I’M SOUND: T00G 2000 0000 00G0 0519
+			für I’M SOUND: T20G 0090 1019
 		</p>
 		<p class="">
 			Die vorgeschriebenen Begleitinformationen werden immer an den aktuellen
