fixed image and added ctas

--- a/site/includes/components/home/6-no-deductable.njk
+++ b/site/includes/components/home/6-no-deductable.njk
@@ -9,8 +9,9 @@
 			<br class="md:hidden"/>
 			Selbstbeteiligung
 		</h3>
-		<p class="text-x2 mb-x1 md:text-x0p25 md:mb-0">
+		<p class="text-x2 mb-x1 md:text-x0p25 md:mb-x0p5">
 			Mit einer Instrumentenversicherung musst Du Dir nach einer Beschädigung keine Sorgen um die Reparaturkosten machen. Auch die Kosten für ein Leihinstrument während der Reparatur übernimmt die Instrumentenversicherung. Nach einem Verlust, zum Beispiel durch Diebstahl, hilft die Auszahlung der Versicherungssumme beim Kauf eines Ersatzinstrumentes. Bei der SINFONIMA-Instrumentenversicherung gibt es keine Selbstbeteiligung. Bei der I’M SOUND-Equipmentversicherung gilt nur für wenige Spezialfälle ein Selbstbehalt.
 		</p>
+		<a href="/anfrage" class="inline-block text-secondary hover:underline text-x2 md:text-x0p25 bg-white p-x1 md:py-x0p25 md:px-x0p5 mb-x2 md:mb-0 md:inline-flex hover:bg-white mr-auto">Jetzt anfragen</a>
 	</div>
 </section>
