--- a/css/main.css
+++ b/css/main.css
@@ -16574,6 +16574,14 @@ video:focus {
   max-width: 1280px;
 }
 
+.max-w-40vw {
+  max-width: 40vw;
+}
+
+.max-w-50vw {
+  max-width: 50vw;
+}
+
 .max-w-100vw {
   max-width: 100vw;
 }
@@ -46436,6 +46444,14 @@ video:focus {
     max-width: 1280px;
   }
 
+  .sm\:max-w-40vw {
+    max-width: 40vw;
+  }
+
+  .sm\:max-w-50vw {
+    max-width: 50vw;
+  }
+
   .sm\:max-w-100vw {
     max-width: 100vw;
   }
@@ -76231,6 +76247,14 @@ video:focus {
 
   .md\:max-w-screen-xl {
     max-width: 1280px;
+  }
+
+  .md\:max-w-40vw {
+    max-width: 40vw;
+  }
+
+  .md\:max-w-50vw {
+    max-width: 50vw;
   }
 
   .md\:max-w-100vw {
@@ -106030,6 +106054,14 @@ video:focus {
     max-width: 1280px;
   }
 
+  .lg\:max-w-40vw {
+    max-width: 40vw;
+  }
+
+  .lg\:max-w-50vw {
+    max-width: 50vw;
+  }
+
   .lg\:max-w-100vw {
     max-width: 100vw;
   }
@@ -135825,6 +135857,14 @@ video:focus {
 
   .xl\:max-w-screen-xl {
     max-width: 1280px;
+  }
+
+  .xl\:max-w-40vw {
+    max-width: 40vw;
+  }
+
+  .xl\:max-w-50vw {
+    max-width: 50vw;
   }
 
   .xl\:max-w-100vw {
