--- a/site/includes/components/home/12-faq-teaser.njk
+++ b/site/includes/components/home/12-faq-teaser.njk
@@ -11,7 +11,12 @@
         {% endif %}
 	{% endfor %}
     </div>
-	<a href="/faq" class="text-x2 md:text-x0p5 underline block md:mb-x1 text-center" title="FAQs aufrufen">
+	<div class="md:flex md:mb-x1 md:justify-center items-center">
+		<a href="/faq" class="text-x2 md:text-x0p5 underline block mb-x1 md:mb-0 mr-x1" title="FAQs aufrufen">
 			Alle FAQs ansehen
 		</a>
+		 <a href="/anfrage" class="inline-block text-white hover:underline text-x2 md:text-x0p25 bg-secondary p-x1 md:py-x0p25 md:px-x0p5 mb-x2 md:mb-0 md:inline-flex hover:bg-secondary-dark" title="Angebot anfragen">
+            Jetzt anfragen
+        </a>
+	</div>
 </section>
