--- a/site/includes/components/social-meta.njk
+++ b/site/includes/components/social-meta.njk
@@ -9,8 +9,7 @@ itemprop="description" content="{% if meta_description %}{{ meta_description }}{
 <meta name="twitter:description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}">
 <meta name="twitter:site" content="{{ site.author.handle }}">
 <meta name="twitter:creator" content="{{ site.author.handle }}">
-<meta
-name="twitter:image:src" content="{{ site.url }}{{ site.images.socialimage }}">
+<meta name="twitter:image" content="{{ site.url }}{{ site.images.socialimage }}">
 
 
 {# Open Graph #}
