--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -15,6 +15,7 @@
         <meta name="description" content="{% if meta_description %}{{ meta_description }}{% else %}{{
         excerpt
       }}{% endif %}"/>
+      <meta name="keywords" content="instrumentenversicherung, sinfonima, im sound, mannheimer, instrumente, versichern, violine, geige, klavier, dj, studio" />
         <meta name="robots" content="index,follow"/>
         <script>
             /**
@@ -62,7 +63,6 @@
         <meta name="theme-color" content="#6B46C1"/>
 
         {# canonical #}
-        <link rel="canonical" href="{{ site.url }}{{ page.url }}"/>
         <link rel="canonical" href="{{ site.url }}{{ page.url }}"/>
         
         {# Include fonts asynchronously #}
