--- a/site/includes/components/social-meta.njk
+++ b/site/includes/components/social-meta.njk
@@ -1,7 +1,6 @@
 {# Google Schema #}
-<meta itemprop="name" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}">
-<meta
-itemprop="description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}">
+{# <meta itemprop content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %}"> #}
+{# <meta itemprop="description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}"> #}
 
 {# Twitter #}
 <meta name="twitter:card" content="summary_large_image">
