--- a/site/includes/components/star-rating-simple.njk
+++ b/site/includes/components/star-rating-simple.njk
@@ -1,30 +1,4 @@
-{# <style>
-	.star-rating {
-		display: flex;
-		align-items: center;
-	}
-	.star-container {
-		display: flex;
-	}
-	svg.full {
-		fill: #ffd219;
-		/* {style.styleFullStarColor} */
-	}
-	svg.empty {
-		fill: #d0d0d0;
-		/* {style.styleEmptyStarColor} */
-	}
-	svg {
-		width: calc(100vw * 1 / 27);
-	}
-	@media(min-width: 768px) {
-		svg {
-			width: calc(100vw * 0.4 / 27);
-		}
-	}
-</style> #}
-
-<div class="star-container">
+<div class="star-container mt-x0p25 md:mt-0">
 	<div
 		class="star-rating flex items-center">
 		<!-- Set stars according to rating -->
