--- a/site/includes/components/home/12-faq-teaser.njk
+++ b/site/includes/components/home/12-faq-teaser.njk
@@ -1,6 +1,6 @@
 {% from "components/youtube.njk" import youtube %}
 
-<section id="ueber-mich" class=" px-x1p5 pb-x3 md:py-x2 w-100 relative items-center">
+<section class=" px-x1p5 pb-x3 md:py-x2 w-100 relative items-center">
     <h2 class="text-primary text-x4 md:text-center leading-tight mb-x2 border-solid">
       Häufig gestellte Fragen
     </h2>
