html validator fixes

--- a/site/includes/components/faq-item.njk
+++ b/site/includes/components/faq-item.njk
@@ -2,5 +2,5 @@
 	<div class="w-full bg-transparent text-primary border-solid border-0 border-b md:border-b-x0p1 border-primary py-x0p5 md:py-x0p25 mb-x0p5 md:mb-x0p25">
 		{{ faq.question }}
 	</div>
-	<div itemprop="text" class="mb-x1 md:mb-x1 opacity-81">{{ faq.answer | safe }}</div>
+	<div class="mb-x1 md:mb-x1 opacity-81">{{ faq.answer | safe }}</div>
 </div>
