--- a/site/includes/components/special-notice.njk
+++ b/site/includes/components/special-notice.njk
@@ -2,5 +2,5 @@
 	<p class="text-center block text-primary">
 		Aktuell gibt es 10 % Sonderrabatt auf alle Beiträge!
 	</p>
-	<div class="icon absolute right-0 mr-x1p5 ml-x0p5 w-x0p5 h-x0p5" data-hide-notice aria-label="Angebot ausblenden"></div>
+	<button class="icon absolute right-0 mr-x1p5 ml-x0p5 w-x0p5 h-x0p5" data-hide-notice aria-label="Angebot ausblenden"></button>
 </div>
