--- a/site/includes/components/review-item-reduced.njk
+++ b/site/includes/components/review-item-reduced.njk
@@ -2,14 +2,8 @@
 	<div class="md:flex items-center my-x0p5 md:m-0 ">
 		{% include "components/star-rating-simple.njk" %}
 		<span class="flex mt-x0p5 md:mt-0 md:text-x0p25 opacity-81">
-
 			<span class="hidden md:inline">&nbsp;</span>
-			von&nbsp;
-			<span>
-				<p >{{ review.name }}</p>
-			</span>
-			&nbsp;am&nbsp;
-			<p>{{ review.date | dateDisplay }}</p>
+			<p><span class="hidden md:inline">von</span> {{ review.name }} am {{ review.date | dateDisplay }}</p>
 		</span>
 	</div>
 	<p class="mb-x0p5 md:m-0">
