--- a/site/includes/components/review-item-reduced.njk
+++ b/site/includes/components/review-item-reduced.njk
@@ -3,7 +3,7 @@
 		{% include "components/star-rating-simple.njk" %}
 		<span class="flex mt-x0p5 md:mt-0 md:text-x0p25 opacity-81">
 			<span class="hidden md:inline">&nbsp;</span>
-			<p><span class="hidden md:inline">von</span> {{ review.name }} am {{ review.date | dateDisplay }}</p>
+			<span><span class="hidden md:inline">von</span> {{ review.name }} am {{ review.date | dateDisplay }}</span>
 		</span>
 	</div>
 	<p class="mb-x0p5 md:m-0">
