Added video webm

--- a/site/includes/components/home/11-video.njk
+++ b/site/includes/components/home/11-video.njk
@@ -7,6 +7,7 @@
     #}
 								<video width="1280" height="720" controls="controls" poster="/videos/poster.jpg">
 												<source src="/videos/vorstellung.mp4" type="video/mp4"/>
+												<source src="/videos/vorstellung.webm" type="video/webm"/>
 												Dein Browser unterstütz leider nicht den HTML-Video-Tag.
 								</video>
 				</div>
