--- a/site/includes/components/home/11-video.njk
+++ b/site/includes/components/home/11-video.njk
@@ -5,7 +5,7 @@
 								{#
     {{ youtube(videoId='F2IZ9GeyaSs', title='Heiner Blaskewitz von B!-Das Versicherungsbüro stellt sich vor') }}
     #}
-								<video width="1280" height="720" controls="controls" poster="/videos/poster.jpg">
+								<video width="1280" height="720" controls="controls" poster="/videos/poster.jpg" playsinline>
 												<source src="/videos/vorstellung.mp4" type="video/mp4"/>
 												<source src="/videos/vorstellung.webm" type="video/webm"/>
 												Dein Browser unterstütz leider nicht den HTML-Video-Tag.
