--- a/site/impressum.njk
+++ b/site/impressum.njk
@@ -291,11 +291,7 @@ title: Impressum
             Versicherungsnehmern eine Beratung an.
           </p>
           <p>
-            Im Zusammenhang mit der Vermittlung erhalte ich Provisionen, die in
-            der Versicherungsprämie enthalten sind.
-          </p>
-          <p>
-            Darüber hinaus erhalte ich als Vergütung keine anderen Zuwendungen.
+            Im Zusammenhang mit der Vermittlung erhalte ich Provisionen und sonstige Vergütungen, die in der Versicherungsprämie enthalten sind, sowie andere Zuwendungen.
           </p>
           <p>
             Ich/Mein Vermittlungsunternehmen besitze/besitzt keine unmittelbare
